--- a/package.json
+++ b/package.json
@@ -27,9 +27,19 @@
     "@nestjs/microservices": "^4.0.0",
     "@nestjs/testing": "^4.0.0",
     "@nestjs/websockets": "^4.0.0",
+    "@types/async": "^2.0.45",
+    "@types/auth0": "^2.4.2",
+    "@types/dotenv": "^4.0.2",
+    "@types/express-jwt": "0.0.38",
+    "@types/jwt-decode": "^2.2.1",
+    "async": "^2.5.0",
+    "auth0": "^2.8.0",
     "body-parser": "^1.18.2",
     "class-transformer": "^0.1.8",
     "class-validator": "^0.7.2",
+    "dotenv": "^4.0.0",
+    "express-jwt": "^5.3.0",
+    "jwt-decode": "^2.2.0",
     "pg": "^7.3.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.0",
