--- a/package.json
+++ b/package.json
@@ -45,17 +45,17 @@
     "rxjs": "^5.4.0",
     "slug": "^0.9.1",
     "typeorm": "^0.1.1",
-    "typescript": "^2.5.2"
+    "typescript": "^2.5.2",
+    "@types/express": "^4.0.37",
+    "@types/slug": "^0.9.0",
+    "@types/node": "^8.0.28",
+    "ts-node": "^3.3.0"
   },
   "devDependencies": {
-    "@types/express": "^4.0.37",
     "@types/jest": "^21.1.2",
-    "@types/node": "^8.0.28",
-    "@types/slug": "^0.9.0",
     "jest": "^21.2.1",
     "nodemon": "^1.12.1",
     "ts-jest": "^21.1.2",
-    "ts-node": "^3.3.0",
     "tslint": "^5.7.0"
   },
   "jest": {
