--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
     "@types/async": "^2.0.45",
     "@types/auth0": "^2.4.2",
     "@types/dotenv": "^4.0.2",
+    "@types/express": "^4.0.37",
     "@types/express-jwt": "0.0.38",
     "@types/jwt-decode": "^2.2.1",
+    "@types/node": "^8.0.28",
+    "@types/slug": "^0.9.0",
     "async": "^2.5.0",
     "auth0": "^2.8.0",
     "body-parser": "^1.18.2",
@@ -47,17 +50,15 @@
     "class-validator": "^0.7.2",
     "dotenv": "^4.0.0",
     "express-jwt": "^5.3.0",
+    "jwks-rsa": "^1.2.1",
     "jwt-decode": "^2.2.0",
     "pg": "^7.3.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.0",
     "slug": "^0.9.1",
+    "ts-node": "^3.3.0",
     "typeorm": "^0.1.1",
-    "typescript": "^2.5.2",
-    "@types/express": "^4.0.37",
-    "@types/slug": "^0.9.0",
-    "@types/node": "^8.0.28",
-    "ts-node": "^3.3.0"
+    "typescript": "^2.5.2"
   },
   "devDependencies": {
     "@types/jest": "^21.1.2",
