--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/express-jwt": "0.0.38",
     "@types/jwt-decode": "^2.2.1",
     "@types/node": "^8.0.28",
+    "@types/node-cache": "^4.1.1",
     "@types/slug": "^0.9.0",
     "async": "^2.5.0",
     "auth0": "^2.8.0",
@@ -52,6 +53,7 @@
     "express-jwt": "^5.3.0",
     "jwks-rsa": "^1.2.1",
     "jwt-decode": "^2.2.0",
+    "node-cache": "^4.1.1",
     "pg": "^7.3.0",
     "reflect-metadata": "^0.1.10",
     "rxjs": "^5.4.0",
