--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "pg": "^7.6.0",
     "reflect-metadata": "^0.1.12",
     "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "slug": "^0.9.2",
     "ts-node": "^7.0.1",
     "typeorm": "^0.2.8",
