--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "class-validator": "^0.9.1",
     "dotenv": "^6.1.0",
     "express-jwt": "^5.3.1",
+    "firebase-admin": "^6.2.0",
     "jwks-rsa": "^1.3.0",
     "jwt-decode": "^2.2.0",
     "node-cache": "^4.2.0",
