--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/core": "^5.4.0",
     "@nestjs/microservices": "^5.4.0",
     "@nestjs/testing": "^5.4.0",
+    "@nestjs/typeorm": "^5.2.2",
     "@nestjs/websockets": "^5.4.0",
     "@types/async": "^2.0.50",
     "@types/auth0": "^2.9.5",
