--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/express": "^4.16.0",
     "@types/express-jwt": "0.0.40",
     "@types/jwt-decode": "^2.2.1",
+    "@types/newrelic": "^4.11.0",
     "@types/node": "^10.12.2",
     "@types/node-cache": "^4.1.1",
     "@types/slug": "^0.9.0",
@@ -55,6 +56,7 @@
     "firebase-admin": "^6.2.0",
     "jwks-rsa": "^1.3.0",
     "jwt-decode": "^2.2.0",
+    "newrelic": "^5.1.0",
     "node-cache": "^4.2.0",
     "pg": "^7.6.0",
     "reflect-metadata": "^0.1.12",
@@ -68,7 +70,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.9",
     "jest": "^23.6.0",
-    "nodemon": "^1.18.5",
+    "nodemon": "^1.18.9",
     "ts-jest": "^23.10.4",
     "tslint": "^5.11.0"
   },
