--- a/package.json
+++ b/package.json
@@ -30,49 +30,46 @@
   },
   "homepage": "https://github.com/wernerholzapfel/molapi#readme",
   "dependencies": {
-    "@nestjs/common": "^5.4.0",
-    "@nestjs/core": "^5.4.0",
-    "@nestjs/microservices": "^5.4.0",
-    "@nestjs/testing": "^5.4.0",
-    "@nestjs/typeorm": "^5.2.2",
-    "@nestjs/websockets": "^5.4.0",
-    "@types/async": "^2.0.50",
-    "@types/auth0": "^2.9.5",
-    "@types/dotenv": "^4.0.3",
-    "@types/express": "^4.16.0",
-    "@types/express-jwt": "0.0.40",
+    "@nestjs/common": "^5.7.4",
+    "@nestjs/core": "^5.7.4",
+    "@nestjs/microservices": "^5.7.4",
+    "@nestjs/testing": "^5.7.4",
+    "@nestjs/typeorm": "^5.3.0",
+    "@nestjs/websockets": "^5.7.4",
+    "@types/async": "^2.4.1",
+    "@types/auth0": "^2.9.10",
+    "@types/dotenv": "^6.1.0",
+    "@types/express": "^4.16.1",
+    "@types/express-jwt": "0.0.41",
     "@types/jwt-decode": "^2.2.1",
-    "@types/newrelic": "^4.11.0",
-    "@types/node": "^10.12.2",
-    "@types/node-cache": "^4.1.1",
-    "@types/slug": "^0.9.0",
-    "async": "^2.6.1",
-    "auth0": "^2.13.0",
+    "@types/node": "^11.11.1",
+    "@types/node-cache": "^4.1.3",
+    "@types/slug": "^0.9.1",
+    "async": "^2.6.2",
     "body-parser": "^1.18.3",
-    "class-transformer": "^0.1.10",
+    "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
-    "dotenv": "^6.1.0",
+    "dotenv": "^6.2.0",
     "express-jwt": "^5.3.1",
-    "firebase-admin": "^6.2.0",
-    "jwks-rsa": "^1.3.0",
+    "firebase-admin": "^7.0.0",
+    "jwks-rsa": "^1.4.0",
     "jwt-decode": "^2.2.0",
-    "newrelic": "^5.1.0",
     "node-cache": "^4.2.0",
-    "pg": "^7.6.0",
-    "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.3.3",
-    "rxjs-compat": "^6.3.3",
-    "slug": "^0.9.2",
-    "ts-node": "^7.0.1",
-    "typeorm": "^0.2.8",
-    "typescript": "^3.1.6"
+    "pg": "^7.8.2",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.4.0",
+    "rxjs-compat": "^6.4.0",
+    "slug": "^1.0.0",
+    "ts-node": "^8.0.3",
+    "typeorm": "^0.2.15-rc.2",
+    "typescript": "^3.3.3333"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.9",
-    "jest": "^23.6.0",
-    "nodemon": "^1.18.9",
-    "ts-jest": "^23.10.4",
-    "tslint": "^5.11.0"
+    "@types/jest": "^24.0.11",
+    "jest": "^24.4.0",
+    "nodemon": "^1.18.10",
+    "ts-jest": "^24.0.0",
+    "tslint": "^5.13.1"
   },
   "jest": {
     "moduleFileExtensions": [
