--- a/package.json
+++ b/package.json
@@ -30,46 +30,47 @@
   },
   "homepage": "https://github.com/wernerholzapfel/molapi#readme",
   "dependencies": {
-    "@nestjs/common": "^5.7.4",
-    "@nestjs/core": "^5.7.4",
-    "@nestjs/microservices": "^5.7.4",
-    "@nestjs/testing": "^5.7.4",
-    "@nestjs/typeorm": "^5.3.0",
-    "@nestjs/websockets": "^5.7.4",
-    "@types/async": "^2.4.1",
-    "@types/auth0": "^2.9.10",
-    "@types/dotenv": "^6.1.0",
-    "@types/express": "^4.16.1",
-    "@types/express-jwt": "0.0.41",
+    "@nestjs/common": "^6.9.0",
+    "@nestjs/core": "^6.9.0",
+    "@nestjs/microservices": "^6.9.0",
+    "@nestjs/platform-express": "^6.9.0",
+    "@nestjs/testing": "^6.9.0",
+    "@nestjs/typeorm": "^6.2.0",
+    "@nestjs/websockets": "^6.9.0",
+    "@types/async": "^3.0.3",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.2",
+    "@types/express-jwt": "0.0.42",
     "@types/jwt-decode": "^2.2.1",
-    "@types/node": "^11.11.1",
-    "@types/node-cache": "^4.1.3",
+    "@types/node": "^12.12.6",
+    "@types/node-cache": "^4.2.5",
     "@types/slug": "^0.9.1",
-    "async": "^2.6.2",
-    "body-parser": "^1.18.3",
-    "class-transformer": "^0.2.0",
-    "class-validator": "^0.9.1",
-    "dotenv": "^6.2.0",
+    "async": "^3.1.0",
+    "body-parser": "^1.19.0",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
+    "dotenv": "^8.2.0",
     "express-jwt": "^5.3.1",
-    "firebase-admin": "^7.0.0",
-    "jwks-rsa": "^1.4.0",
+    "firebase-admin": "^8.7.0",
+    "jwks-rsa": "^1.6.0",
     "jwt-decode": "^2.2.0",
-    "node-cache": "^4.2.0",
-    "pg": "^7.8.2",
+    "node-cache": "^5.0.1",
+    "npm-check-updates": "^3.2.0",
+    "pg": "^7.12.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.4.0",
-    "rxjs-compat": "^6.4.0",
-    "slug": "^1.0.0",
-    "ts-node": "^8.0.3",
-    "typeorm": "^0.2.15-rc.2",
-    "typescript": "^3.3.3333"
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
+    "slug": "^1.1.0",
+    "ts-node": "^8.4.1",
+    "typeorm": "^0.2.20",
+    "typescript": "^3.7.2"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.11",
-    "jest": "^24.4.0",
-    "nodemon": "^1.18.10",
-    "ts-jest": "^24.0.0",
-    "tslint": "^5.13.1"
+    "@types/jest": "^24.0.22",
+    "jest": "^24.9.0",
+    "nodemon": "^1.19.4",
+    "ts-jest": "^24.1.0",
+    "tslint": "^5.20.1"
   },
   "jest": {
     "moduleFileExtensions": [
