--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jwt-decode": "^2.2.0",
     "node-cache": "^5.0.1",
     "npm-check-updates": "^3.2.0",
+    "onesignal-node": "^3.1.5",
     "pg": "^7.12.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.3",
